Adds system tray icon, removes "reduce volume to safe levels" feature.

--- a/src/Ae.LineCalibrator.Interface/Ae.LineCalibrator.Interface.csproj
+++ b/src/Ae.LineCalibrator.Interface/Ae.LineCalibrator.Interface.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <ApplicationIcon>Assets\Speaker.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Compile Update="**\*.xaml.cs">
@@ -12,11 +13,17 @@
     </AvaloniaResource>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.0.6" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.0.6" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.6" />
+    <PackageReference Include="Avalonia" Version="11.1.1" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.1.1" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ae.LineCalibrator.Audio\Ae.LineCalibrator.Audio.csproj" />
   </ItemGroup>
+	<ItemGroup>
+		<AvaloniaResource Include="Assets\**" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Content Include="Assets\Speaker.ico" />
+	</ItemGroup>
 </Project>
